fix: add ja, ch / open graph modify

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<meta property="og:title" content="LEETEKWOO.COM" />
 		<meta
 			property="og:description"
-			content="이 택우 (Lee Tek Woo) - 학생, 엔지니어, 노동자, 예술가"
+			content="이 택우 (Lee TekWoo) - Engineer, Artist, Student, Worker"
 		/>
-		<meta property="og:image" content="./LEETEKWOO_OG.png" />
+		<meta property="og:image" content="./images/meta/LEETEKWOO_OG.png" />
 		<meta property="og:url" content="https://leetekwoo.com" />
 		<meta property="og:type" content="website" />
 	</head>
@@ -49,7 +49,12 @@
 						<p lang="kr">
 							하위 도메인으로 연결된 사이트 모음입니다.
 							<br />
-							<span lang="en">A collection of subdomains.</span>
+							<span lang="en">A collection of subdomains.</span> <br />
+							<span lang="ja"
+								>サブドメインに接続されたサイトのコレクションです。</span
+							>
+							<br />
+							<span lang="zh">通过子域链接的站点集合。</span>
 						</p>
 					</div>
 				</header>
@@ -171,6 +176,16 @@
 							<em
 								><strong><u>any type of engineering</u></strong></em
 							>.
+						</p>
+						<p lang="ja">
+							プログラミングを始める前は、生計を立てるためにさまざまな仕事をしていました。
+							<br />
+							この時点で、私はどんなエンジニアリングでも働くことを確信しています。
+						</p>
+						<p lang="zh">
+							在开始编程之前，我做过各种各样的工作。
+							<br />
+							现在，我确信无论做什么工作，我都会成为一名工程师。
 						</p>
 					</div>
 				</header>
