--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 		<meta property="og:image" content="./images/meta/LEETEKWOO_OG.png" />
 		<meta property="og:url" content="https://leetekwoo.com" />
 		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="LEETEKWOO.COM" />
+		<meta property="og:locale" content="ko_KR" />
+		<meta property="og:locale:alternate" content="en_US" />
+		<meta property="og:locale:alternate" content="ja_JP" />
+		<meta property="og:locale:alternate" content="zh_CN" />
+		<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
 	</head>
 	<body>
 		<main>
