chore: fix email address

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<ul class="list list-dash">
 						<li>
 							Email:
-							<a href="mailto:leetekwoo@gmail.com">leetekwoo@gmail.com</a>
+							<a href="mailto:mail@leetekwoo.com">mail@leetekwoo.com</a>
 						</li>
 						<li>
 							Github:
