--- a/index.html
+++ b/index.html
@@ -103,20 +103,29 @@
 								>
 							</li>
 							<li>
+								<a
+										href="https://art.leetekwoo.com"
+										target="_blank"
+										rel="noopener"
+										referrerpolicy="origin"
+								>
+									art.leetekwoo.com</a
+							>
+								<sub><i>(Official)</i></sub>
+							</li>
+							<li>
 								Pattern Recognition:
 								<a target="_blank" href="https://patterns.leetekwoo.com"
 									>patterns.leetekwoo.com</a
 								>
 								<sub><i>(Experimental)</i></sub>
 							</li>
+
 						</ul>
 					</dd>
 					<dt>제작 중 Work In Progress</dt>
 					<dd>
 						<ul class="list list-dash opacity-50">
-							<li>art.leetekwoo.com</li>
-							<li>poetry.leetekwoo.com</li>
-							<li>unknowns</li>
 						</ul>
 					</dd>
 				</dl>
@@ -148,15 +157,6 @@
 								href="https://hackers.pub/@leetekwoo"
 								rel="me noopener noreferrer"
 								>@leetekwoo</a
-							>
-						</li>
-						<li>
-							Twitter(X):
-							<a
-								target="_blank"
-								href="https://twitter.com/teklee_dev"
-								rel="me noopener noreferrer"
-								>@teklee_dev</a
 							>
 						</li>
 					</ul>
