--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 								>
 							</li>
 							<li>
+								Art: 
 								<a
 										href="https://art.leetekwoo.com"
 										target="_blank"
@@ -121,11 +122,6 @@
 								<sub><i>(Experimental)</i></sub>
 							</li>
 
-						</ul>
-					</dd>
-					<dt>제작 중 Work In Progress</dt>
-					<dd>
-						<ul class="list list-dash opacity-50">
 						</ul>
 					</dd>
 				</dl>
