--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</h2>
 					<div class="description">
 						<p lang="kr">
-							하위 도메인으로 연결된 사이트 모음입니다.
+							제가 개발한 사이트들입니다.
 							<br />
 							<span lang="en">A collection of subdomains.</span> <br />
 							<span lang="ja"
@@ -128,32 +128,14 @@
 			</section>
 			<section>
 				<h2>
-					<span lang="kr">채널</span>
-					<span lang="en">Channels</span>
+					<span lang="kr">연락처</span>
+					<span lang="en">Contact</span>
 				</h2>
 				<address>
 					<ul class="list list-dash">
 						<li>
 							Email:
 							<a href="mailto:mail@leetekwoo.com">mail@leetekwoo.com</a>
-						</li>
-						<li>
-							Github:
-							<a
-								target="_blank"
-								href="https://github.com/0teklee"
-								rel="me noopener noreferrer"
-								>@0teklee</a
-							>
-						</li>
-						<li>
-							Hackers Pub:
-							<a
-								target="_blank"
-								href="https://hackers.pub/@leetekwoo"
-								rel="me noopener noreferrer"
-								>@leetekwoo</a
-							>
 						</li>
 					</ul>
 				</address>
@@ -167,14 +149,6 @@
 					<div class="description">
 						<p lang="kr">
 							프로그래밍을 시작하기 전에는 생계를 위해 다양한 일을 했습니다.
-							<br />
-							<em
-								><strong
-									><u
-										>앞으로 무슨 일을 하든 엔지니어링이 될 것입니다.</u
-									></strong
-								></em
-							>
 						</p>
 						<p lang="en">
 							I had multiple jobs before starting programming. <br />
@@ -200,7 +174,7 @@
 					<dd>
 						<ul class="list list-dash">
 							<li>
-								생산 및 건설 노동자 Industrial & Construction Worker
+								생산 및 건설 노동자 Construction & Factory Worker
 								<sub>2+ years</sub>
 							</li>
 							<li>사서 Librarian <sub>1 year</sub></li>
@@ -211,8 +185,6 @@
 					</dd>
 					<dt>Present</dt>
 					<dd>
-						<b>일용직 노동자</b>
-						<br />
 						<span lang="en">Part-Time Handyman</span>
 					</dd>
 					<dt>Future</dt>
