--- a/index.html
+++ b/index.html
@@ -76,30 +76,12 @@
 					<dd>
 						<ul class="list list-dash">
 							<li>
-								Teklog (Tech Blog):
-								<a
-									target="_blank"
-									href="https://blog.leetekwoo.com"
-									rel="me noopener noreferrer"
-									>blog.leetekwoo.com</a
-								>
-							</li>
-							<li>
 								Portfolio:
 								<a
 									target="_blank"
 									href="https://portfolio.leetekwoo.com"
 									rel="me noopener noreferrer"
 									>portfolio.leetekwoo.com</a
-								>
-							</li>
-							<li>
-								Resume (KR):
-								<a
-									target="_blank"
-									href="https://resume.leetekwoo.com"
-									rel="me noopener noreferrer"
-									>resume.leetekwoo.com</a
 								>
 							</li>
 							<li>
@@ -121,7 +103,6 @@
 								>
 								<sub><i>(Experimental)</i></sub>
 							</li>
-
 						</ul>
 					</dd>
 				</dl>
@@ -135,7 +116,7 @@
 					<ul class="list list-dash">
 						<li>
 							Email:
-							<a href="mailto:mail@leetekwoo.com">mail@leetekwoo.com</a>
+							<a href="mailto:mail@leetekwoo.com">contact@leetekwoo.com</a>
 						</li>
 					</ul>
 				</address>
@@ -178,7 +159,6 @@
 								<sub>2+ years</sub>
 							</li>
 							<li>사서 Librarian <sub>1 year</sub></li>
-							<li>교육자 Educator <sub>approx. 5 years</sub></li>
 							<li>사진가 Photographer <sub>approx. 5 years</sub></li>
 							<li>소프트웨어 엔지니어 Software Engineer <sub>2+ years</sub></li>
 						</ul>
@@ -190,7 +170,6 @@
 					<dt>Future</dt>
 					<dd>
 						<ul class="list list-dash">
-							<li>학생 Student</li>
 							<li>엔지니어 Engineer</li>
 							<li>예술가 Artist</li>
 						</ul>
