--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 				</h1>
 				<div class="description">
 					<p lang="kr">
-						학생, 엔지니어, 노동자, 예술가
+						엔지니어, 노동자, 예술가
 						<br />
 						<span lang="en"
-							>Student, Engineer, Worker, Artist<sup
+							>Engineer, Worker, Artist<sup
 								><a href="#footnote-1" class="note-font" title="note in footer"
 									>†</a
 								></sup
@@ -57,7 +57,7 @@
 					</h2>
 					<div class="description">
 						<p lang="kr">
-							제가 개발한 사이트들입니다.
+							제가 개발한 웹사이트들입니다.
 							<br />
 							<span lang="en">A collection of subdomains.</span> <br />
 							<span lang="ja"
@@ -123,11 +123,7 @@
 							프로그래밍을 시작하기 전에는 생계를 위해 다양한 일을 했습니다.
 						</p>
 						<p lang="en">
-							I had multiple jobs before starting programming. <br />
-							At this point, I am sure I will work on
-							<em
-								><strong><u>any type of engineering</u></strong></em
-							>.
+							I had multiple jobs before starting programming.
 						</p>
 						<p lang="ja">
 							プログラミングを始める前は、生計を立てるためにさまざまな仕事をしていました。
@@ -156,7 +152,7 @@
 					</dd>
 					<dt>Present</dt>
 					<dd>
-						<span lang="en">Part-Time Handyman</span>
+						<span lang="en">Freelance Handyman</span>
 					</dd>
 					<dt>Future</dt>
 					<dd>
