Add link to wiki.leetekwoo.com in index.html
wiki

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
 					<dd>
 						<ul class="list list-dash">
 							<li>
+								Wiki: 
+								<a
+										href="https://wiki.leetekwoo.com"
+										target="_blank"
+										rel="noopener"
+										referrerpolicy="origin"
+								>
+									wiki.leetekwoo.com</a
+							>
+							</li>
+							<li>
 								Art: 
 								<a
 										href="https://art.leetekwoo.com"
